--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.20",
